--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,12 @@
 doctype html
 html
-include ./head.pug
-include ./header.pug
-main(class="container container-body")
-    h1(id="header-title") freeCodeCamp Voting App
-    
+    include ./head.pug
+    include ./header.pug
+    main(class="container container-body")
+        h1(id="header-title") freeCodeCamp Voting App
+        h2(id="poll-list-label") Polls
+        hr(class="title-hr")
+        ul(class="poll-list")
+            each poll in polls
+                a(href='/poll/' + poll._id)
+                    li= poll.question
