--- a/public/styles.css
+++ b/public/styles.css
@@ -94,6 +94,12 @@ html {
     color:white;
 }
 
+#cast-vote-button:enabled:hover {
+    -webkit-animation: voteglow 2s infinite;
+    background-image: radial-gradient(ellipse at center, hsl(110, 100%, 60%) 0%, hsl(110, 100%, 65%) 100%);
+    color:white;
+}
+
 #cast-vote-button {
     display:block;
     margin-top: 5px;
@@ -117,7 +123,7 @@ input[type="text"] {
     border-radius:5px;
 }
 
-input[type="submit"] {
+input[type="submit"], button[type="submit"] {
     border-radius:5px;
 }
 
