--- a/public/styles.css
+++ b/public/styles.css
@@ -236,8 +236,8 @@ input[type="submit"], button[type="submit"] {
 }
 
 .title-hr {
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-    height: 1px;
+    background-image: linear-gradient(to right, hsla(210, 100%, 90%, 0), hsla(210, 100%, 90%, 0.75), hsla(210, 100%, 90%, 0));
+    height: 5px;
     margin-top: -8px;
     margin-bottom: 20px;
 }
@@ -246,24 +246,51 @@ input[type="submit"], button[type="submit"] {
 #sign-in {
     background-color: hsl(210, 100%, 70%);
     border-radius: 10px;
-    box-shadow: 2px 2px 2px 4px rgba(0,0,0,.2);
+    box-shadow: inset 0px 0px 2px 4px rgba(0,0,0,.2);
+    font-family: "Arimo", Helvetica, Arial, sans-serif;
+    text-shadow: 2px 2px 2px rgba(0,0,0,.2);
+    transition-property: background-color;
+    transition-duration: 0.2s;
+    transition-timing-function: linear;
+}
+
+#sign-in:hover {
+    background-color: hsl(205, 100%, 70%);
+    border-radius: 10px;
+    box-shadow: 
+        inset 0px 0px 2px 2px rgba(0,0,0,.2),
+        0px 0px 2px 2px rgba(255,255,255,.6);
+    text-shadow: 2px 2px 2px rgba(0,0,0,.2);
+    transition-property: background-color;
+    transition-duration: 0.2s;
+    transition-timing-function: linear;
+}
+
+#sign-in a {
+    color:white;
+}
+
+#sign-out a {
+    color:white;
+}
+
+#sign-out {
+    background-color: hsl(210, 100%, 70%);
+    border-radius: 10px;
+    box-shadow: 
+        inset 0px 0px 2px 2px rgba(0,0,0,.2),
+        0px 0px 2px 2px rgba(255,255,255,.6);
     color: white;
     font-family: "Arimo", Helvetica, Arial, sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,.2);
 }
 
-#sign-in:hover {
-    background-color: rgb(30, 20, 144);
+#sign-out:hover {
+    background-color: hsl(20, 100%, 70%);
     border-radius: 10px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,.2);
-    color: white;
-    text-shadow: 2px 2px 2px rgba(0,0,0,.2);
-}
-
-#sign-out {
-    background-color: hsl(110, 100%, 30%);
-    border-radius: 10px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,.2);
+    box-shadow: 
+        inset 0px 0px 2px 2px rgba(0,0,0,.2),
+        0px 0px 2px 2px rgba(255,255,255,.6);
     color: white;
     font-family: "Arimo", Helvetica, Arial, sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,.2);
