--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,14 @@ html {
     height: 100%; /* So the gradient does not look askew */
 }
 
+#chart-container {
+    border: 1px dotted black;
+    display: block;
+    height: 550px;
+    margin: 0px auto 15px auto;
+    width: 550px;
+}
+
 .container-body {
     background-color: white;
     border-radius: 5px;
@@ -194,8 +202,8 @@ input[type="submit"], button[type="submit"] {
     font-weight: 400;
     font-size: 18px;
     letter-spacing: .2em;
-    margin-bottom: 30px;
-    margin-top: -10px;
+    margin-bottom: 10px;
+    margin-top: -20px;
     text-align: left;
     text-shadow: 2px 2px 2px #BBB;    
 }
@@ -283,14 +291,16 @@ input[type="submit"], button[type="submit"] {
     color: white;
     font-family: "Arimo", Helvetica, Arial, sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,.2);
+    transition-property: background-color;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
 }
 
 #sign-out:hover {
-    background-color: hsl(20, 100%, 70%);
+    background-color: black;;
     border-radius: 10px;
     box-shadow: 
-        inset 0px 0px 2px 2px rgba(0,0,0,.2),
-        0px 0px 2px 2px rgba(255,255,255,.6);
+        inset 0px 0px 2px 2px rgba(255,255,255,1),
     color: white;
     font-family: "Arimo", Helvetica, Arial, sans-serif;
     text-shadow: 2px 2px 2px rgba(0,0,0,.2);
