--- a/views/poll.pug
+++ b/views/poll.pug
@@ -4,7 +4,7 @@ html
     include ./head.pug
     include ./header.pug
     main(class="container container-body")
-        script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js")
+        script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js")
         h1(id="header-title") #{poll.question}
         hr(class="title-hr")
         h2(class="poll-author vert-rule-r") Created by #{poll.pollOwner[0].userName}
