--- a/views/poll.pug
+++ b/views/poll.pug
@@ -24,6 +24,8 @@ html
                         label(for="custom-option-input" class="custom-label") add your own option
                         input(id="custom-option-input" name="custom-vote" type="text")
                     button(accesskey="v" form="vote-form" type="submit" id="cast-vote-button" disabled) Cast #[u V]ote
-            //- The JS will use this ID to append an SVG
+            //- The client JS will use this ID to append an SVG with the poll results
             div(class="col-md-8 poll-results-pane" id="poll-results-pane")
+                div(id="chart-container")
+                div(id="results-legend")
                 
