--- a/views/poll.pug
+++ b/views/poll.pug
@@ -10,22 +10,24 @@ html
         h2(class="poll-author vert-rule-r") Created by #{poll.pollOwner[0].userName}
         div(class="row")
             div(class="col-md-4 poll-options-pane")
-                form(action="/submit-vote" id="vote-form" method="post")
-                    p Select an #[u o]ption:
-                    //- This input makes sure we POST the poll id a vote is being submitted for
-                    input(type="hidden" name="poll-id")&attributes({'value': poll._id.toString()})
-                    select(accesskey="o" id="vote-dropdown" name="vote-selection")
-                        option(value="unchosen") -------------
-                        each val, index in poll.options
-                            option(value=index) #{val}
-                        if (typeof username !== 'undefined')
-                            option(value="addNew") (add a custom option)
-                    div(id="custom-option-pane" style="display:none")
-                        label(for="custom-option-input" class="custom-label") add your own option
-                        input(id="custom-option-input" name="custom-vote" type="text")
-                    button(accesskey="v" form="vote-form" type="submit" id="cast-vote-button" disabled) Cast #[u V]ote
+                h2(class="subcontainer-head") Vote
+                div(id="vote-pane")
+                    form(action="/submit-vote" id="vote-form" method="post")
+                        p Select an #[u o]ption:
+                        //- This input makes sure we POST the poll id a vote is being submitted for
+                        input(type="hidden" name="poll-id")&attributes({'value': poll._id.toString()})
+                        select(accesskey="o" id="vote-dropdown" name="vote-selection")
+                            option(value="unchosen") -------------
+                            each val, index in poll.options
+                                option(value=index) #{val}
+                            if (typeof username !== 'undefined')
+                                option(value="addNew") (add a custom option)
+                        div(id="custom-option-pane" style="display:none")
+                            label(for="custom-option-input" class="custom-label") add your own option
+                            input(id="custom-option-input" name="custom-vote" type="text")
+                        button(accesskey="v" form="vote-form" type="submit" id="cast-vote-button" disabled) Cast #[u V]ote
             //- The client JS will use this ID to append an SVG with the poll results
             div(class="col-md-8 poll-results-pane" id="poll-results-pane")
+                h2(class="subcontainer-head") Results
                 div(id="chart-container")
                 div(id="results-legend")
-                
