--- a/public/styles.css
+++ b/public/styles.css
@@ -112,6 +112,25 @@
     margin-left: 3px;
     margin-right: 3px;
 }
+#share-link {
+    width: 250px;
+}
+#share-links-pane {
+    display:none;
+}
+#share-links-pane button {
+    background-color: #207520;
+    border-radius: 5px;
+    color: white;
+}
+#sharing-pane {
+    border: 1px outset rgba(0,0,0,0.4);
+    box-shadow: 0 10px 6px -6px #777; inset 0px 0px 1px 1px rgba(0,0,0,0.3);
+    border-collapse: collapse;
+    display: block;
+    margin: 10px auto 15px auto;
+    padding: 2px;
+}
 #sign-in
 {
 	background-color: hsl(210, 100%, 70%);
