Users can now delete their own polls.
This closes #4.  If a user is viewing a poll they created, they now
have an option to delete that poll.

--- a/views/header.pug
+++ b/views/header.pug
@@ -28,7 +28,9 @@ body
                                         |&nbsp;#{username}
                             else
                                 li(id="sign-in")
-                                    a(href="/auth/twitter" title="Sign in")
+                                    a(accesskey="s" href="/auth/twitter" title="Sign in")
                                         i(aria-hidden="true" class="fa fa-twitter-square" style="display: inline !important;")
-                                        |&nbsp;Sign In
+                                        |&nbsp;
+                                        u S
+                                        |ign In
                     //- /navbar-collapse
