--- a/public/styles.css
+++ b/public/styles.css
@@ -36,6 +36,9 @@
 	margin: 0px auto 15px auto;
 	width: 550px;
 }
+#confirm-delete-pane {
+    display: none;
+}
 #create-poll-div
 {
 	margin-bottom: 15px;
@@ -44,6 +47,12 @@
 #custom-option-pane
 {
 	padding-left: 5px;
+}
+#dp-button {
+    background-color: darkred;
+    border-radius: 5px;
+    color: white;
+    display: block;
 }
 #header-title
 {
@@ -99,6 +108,9 @@
 #poll-create:enabled:focus, #poll-create:enabled:hover
 {
 	box-shadow: 0px 0px 30px yellow;
+}
+#remove-pane a {
+    color: red;
 }
 #results-legend {
  	border: 1px outset rgba(0,0,0,0.4);
