--- a/views/poll.pug
+++ b/views/poll.pug
@@ -36,6 +36,16 @@ html
                             button(aria-label="Copy link" class="cb-copy" data-clipboard-target="#share-link" id="cb-copy" type="button")
                                 i(aria-hidden="true" class="fa fa-files-o")
                                 |  Copy
+                    if poll.pollOwner[0]._doc.userName == username
+                        div(id="remove-pane")
+                            a(href="#" id="delete-btn")
+                                i(aria-hidden="true" class="fa fa-trash-o" style="display: inline !important;")
+                                | Delete Poll
+                            div(id="confirm-delete-pane")
+                                | Are you sure you want to delete this poll?
+                                button(aria-label="Delete" id="dp-button" type="button")
+                                    i(aria-hidden="true" class="fa fa-times" style="display: inline !important;")
+                                    |  Delete
             //- The client JS will use this ID to append an SVG with the poll results
             div(class="col-md-8 poll-results-pane" id="poll-results-pane")
                 h2(class="subcontainer-head") Results
