--- a/views/head.pug
+++ b/views/head.pug
@@ -1,11 +1,15 @@
-head
-    title freeCodeCamp Vote - #{title}
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js')
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin='anonymous')
-    //Just a reminder, the compiled Bootstrap (below) includes plugins like collapse.js
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js")
-    script(src="/client.js")
-    link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Arimo:400,700')
-    link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
-    link(rel='stylesheet', href='/styles.css')
+doctype html
+html(ng-app='next-update-stats')
+    head
+        title freeCodeCamp Vote - #{title}
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js')
+        link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin='anonymous')
+        //Just a reminder, the compiled Bootstrap (below) includes plugins like collapse.js
+        script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
+        //script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js")
+        script(src="/app.js")
+        script(src="/client.js")
+        link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Arimo:400,700')
+        link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
+        link(rel='stylesheet', href='/styles.css')
