--- a/views/header.pug
+++ b/views/header.pug
@@ -1,4 +1,4 @@
-body
+body(ng-app="fcc-bp-vote")
     div(class="container container-outer")
         header
             nav(class="navbar navbar-default")
