Angular injection into ui-view working but...
…the user information in HEADER does not update after returning from
Twitter auth.  HEADER is not contained in ui-view, so it should not be
an Angular issue.  May be something with routes.  Doing a commit before
changing anything else around.

--- a/views/head.pug
+++ b/views/head.pug
@@ -1,12 +1,13 @@
 doctype html
-html(ng-app='next-update-stats')
+html(ng-app="fcc-bp-vote")
     head
         title freeCodeCamp Vote - #{title}
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js')
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin='anonymous')
         //Just a reminder, the compiled Bootstrap (below) includes plugins like collapse.js
         script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
-        //script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js")
+        script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js")
         script(src="/app.js")
         script(src="/client.js")
