--- a/views/header.pug
+++ b/views/header.pug
@@ -1,4 +1,4 @@
-body(ng-app="fcc-bp-vote")
+body
     div(class="container container-outer")
         header
             nav(class="navbar navbar-default")
@@ -15,19 +15,20 @@ body(ng-app="fcc-bp-vote")
                     div(class="collapse navbar-collapse" target="navbar-collapse")
                         ul(class="nav navbar-nav navbar-right")
                             li 
-                                a(href="/") Home
+                                a(ui-sref="/") Home
                             if typeof username != 'undefined'
                                 li
-                                    a(href="/mypolls" id="button-mypolls") My Polls
+                                    a(ui-sref="/mypolls" id="button-mypolls") My Polls
                                 li
-                                    a(href="/new" id="button-new") New Poll
+                                    a(ui-sref="/new" id="button-new") New Poll
                             if typeof username != 'undefined'
                                 li(id="sign-out")
-                                    a(href="/logout" title="Sign out")
+                                    a(ui-sref="/logout" title="Sign out")
                                         i(class="fa fa-sign-out" display="inline !important" aria-hidden="true")
                                         |&nbsp;#{username}
                             else
                                 li(id="sign-in")
+                                    //- Do not change to ui-sref as we actually need to leave the site for auth
                                     a(accesskey="s" href="/auth/twitter" title="Sign in")
                                         i(aria-hidden="true" class="fa fa-twitter-square" style="display: inline !important;")
                                         |&nbsp;
