Added favicon, added states, set view engine to Pug

--- a/views/head.pug
+++ b/views/head.pug
@@ -1,5 +1,5 @@
 doctype html
-html(ng-app="fcc-bp-vote")
+html
     head
         title freeCodeCamp Vote - #{title}
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js')
@@ -14,3 +14,4 @@ html(ng-app="fcc-bp-vote")
         link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Arimo:400,700')
         link(rel='stylesheet', type='text/css', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css')
         link(rel='stylesheet', href='/styles.css')
+        link(rel='icon', href="/favicon.ico" type="image/x-icon")
