--- a/public/styles.css
+++ b/public/styles.css
@@ -176,6 +176,7 @@
 	box-shadow: inset 0px 0px 2px 2px rgba(0,0,0,.2),
  0px 0px 2px 2px rgba(255,255,255,.6);
 	color: white;
+    cursor: grab;
 	font-family: "Arimo", Helvetica, Arial, sans-serif;
 	text-shadow: 2px 2px 2px rgba(0,0,0,.2);
 	transition-duration: 0.2s;
