--- a/views/head.pug
+++ b/views/head.pug
@@ -9,6 +9,7 @@ html
         script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.10/clipboard.min.js")
+        script(type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js")
         script(src="/app.js")
         script(src="/client.js")
         link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Arimo:400,700')
